Adding new masthead placeholder, from screenshot

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<p><img src="numby-masthead-placeholder.png" width="599" height="241" alt="Numby, The Counting Robot" /><br />
+<p><img src="numby-masthead-placeholder-2.png" alt="Numby, The Counting Robot" /><br />
 &quot;There's nothing that Numby would rather do than count to ten then back again. For every rainbow in the sky, he counts the colors he can spy.&quot;</p>
 <p>&nbsp;</p>
 <hr />
