--- a/index.html
+++ b/index.html
@@ -12,63 +12,7 @@
 </style>
 </head>
 
-<body>
-<p><img src="numby-masthead-placeholder-2.png" alt="Numby, The Counting Robot" /><br />
-&quot;There's nothing that Numby would rather do than count to ten then back again. For every rainbow in the sky, he counts the colors he can spy.&quot;</p>
-<p>&nbsp;</p>
-<hr />
-<p>&nbsp;</p>
-<p>
-  <label>  <img src="numby-screenshot.png" width="768" height="1024" alt="Numby Screenshot" /><br />
-  </label>
-</p>
-<p class="asdasd">
-  <label><span style="font-size: 24px"></span>
-    <input name="button" type="submit" class="asdasd" id="button" value="GET NUMBY!" />
-  </label>
-<span style="font-size: 36px"></span></p>
-<p class="asdasd">&nbsp;</p>
-<hr />
-<p>&nbsp;</p>
-<p>Hi we're *James and Amit*. We love to make art and to code, and especially to mix the two together. <br />
-  Seeing our young kids learn to count made us want to explore the simple act of counting from *zero to ten* in weird and wonky ways. That's how Numby was born.</p>
-<p>We hope you enjoy Numby. Today he just counts to Ten and back again, but we'll continue to teach Numby new tricks in small increments, and surprise with new updates.</p>
-<p>&nbsp;</p>
-<hr />
-<p>&nbsp;</p>
-<p>UPDATES</p>
-<p>2012-01-26   Version 0.2: <br />
-  [image, vid, or animation]<br />
-  &quot;Lorem Ipsum velit blah blah blah. Lorem Ipsum velit blah blah blah. Lorem Ipsum velit blah blah blah. Lorem Ipsum velit blah blah blah.&quot;<br />
-  </p>
-<p>2012-01-12   Version 0.1: <br />
-  [image, vid, or animation]<br />
-  &quot;There's nothing that Numby would rather do than count to ten then back again. For every rainbow in the sky, he counts the colors he can spy.&quot;</p>
-<p>&nbsp;</p>
-<hr />
-<p>&nbsp;</p>
-<p>TESTIMONIALS </p>
-<p>&quot;Testimonial 1 here, lalala.&quot; - Old McDonald</p>
-<p>&quot;Testimonial 1 here, lalala.&quot; - Old McDonald</p>
-<p>&quot;Testimonial 1 here, lalala.&quot; - Old McDonald </p>
-<p>&nbsp;</p>
-<hr />
-<p>&nbsp;</p>
-<p>*About James and Amit*<br />
-  Numby is our first collaborative iPad app, but we've been making other magical things together for a while. Chasing our imagination has lead us into strange lands of *drawing*, *music*, *animation*, and even *dance* projects. If we could only show you three things, they would be: </p>
-<p>Deisel Delight - a simple animation where James drew and Amit played the organ.<br />
-  Rhonda the 3D drawing tool - See James draw with our special 3D pen and paper.<br />
-Smashup the dance project - Don't worry, we're not dancing in this clip.</p>
-<p>**Why Numby knows about Zero**<br />
-  Counting seems like such a simple thing to do, but even we computer coders make silly mistakes, especially because of the number 0. So for his debut, we made sure that Numby also knows about Zero from the get go. </p>
-<p>Zero is an important number. Someone even wrote an *entire book about it*! <br />
-  (http://www.amazon.com/Zero-Biography-Dangerous-Charles-Seife/dp/0140296476) </p>
-<p>While most people start counting from 1, in computer programs we typically start counting from 0. Sometimes that gets us coders in trouble, especially when we forget that counting from 0 to 10 takes 11 steps (try counting up to 10 with your fingers but start from 0..1..2..3..  and you'll see!)</p>
-<p><br />
-</p>
-<hr /> 
-<p>&nbsp;</p>
-<p>PITARU  PATERSON </p>
-<p>&nbsp;</p>
+<body bgcolor="#FFFEEB" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<div align="center"><img src="numby-site-mockup-bg-creme-tighter-INSANECTA.png" alt="" width="766" height="2575" /></div>
 </body>
 </html>
