taking out fancy border again

--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
 				background-color:#FFFEEB;
 				margin: 0px;
 			}
-			#outer-container {
+			#container {
 				//background-color:#FF0000;
 				width: 810px;
 				margin:0px auto;
 				text-align:left;
 			}
-			#inner-container {
-
-			}
-
 		</style>
 	</head>
 	<body>
-		<div id="outer-container">
-			<div id="inner-container">
-				<img src="numby-site-mockup-bg-creme-tighter-INSANECTA_-1.png" alt="Big Numby Pic!" />
-			</div>
+		<div id="container">
+			<img src="numby-site-mockup-bg-creme-tighter-INSANECTA.png" alt="Big Numby Pic!" />
 		</div>
 	</body>
 </html>
