messing with width

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<img src="numby-site-mockup-bg-creme-tighter-INSANECTA.png" alt="Big Numby Pic!" />
+			<img src="numby-site-mockup-bg-creme-tighter-INSANECTA_-1.png" width="768" height="2569" alt="Big Numby Pic!" />
 		</div>
 	</body>
 </html>
