Made link live!

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 				color: #25b5e9;
 			}
 			#container {
+				background-color:#023f57;
 				width: 767px;
-				margin:0px auto;
+				//margin:0px auto;
 				text-align:left;
 			}
 			#info {
@@ -62,7 +63,7 @@
 
 			<img src="top.png" alt="Top" border="0" usemap="#Map"/>
             <map name="Map" id="Map" title="Get Numby for iPad at the Apple App Store">
-              <area shape="rect" coords="53,395,295,472" href="http://www.apple.com/mac/app-store/" target="_self" alt="Get Numby for iPad at the Apple App Store" />
+              <area shape="rect" coords="53,395,295,472" href="http://itunes.apple.com/us/app/numby/id499958256" target="_self" alt="Get Numby for iPad at the Apple App Store" />
             </map>
 		  <div id="info">
   <div class="info-block">
