--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			#container {
 				background-color:#023f57;
 				width: 767px;
-				//margin:0px auto;
+				margin:0px auto;
 				text-align:left;
 			}
 			#info {
