Changing description slightly

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<div class="info-block-text">
 						<h2>About Numby</h2>
 						<p>Seeing each of our young kids learn to count sparked our imagination. We wanted to explore the simple act of counting from <a href="#zero" title="Why does Numby care about Zero?">zero</a> to ten in weird and wonky ways. That's how Numby was born.</p>
-						<p>We'll continue to teach him new tricks in small increments, and surprise you with updates.</p>
+						<p>We'll continue to teach him new tricks and surprise you with updates.</p>
 
 						
 					</div>
