adding email address

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <map name="Map" id="Map" title="Get Numby for iPad at the Apple App Store">
               <area shape="rect" coords="53,395,295,472" href="http://itunes.apple.com/us/app/numby/id499958256" target="_self" alt="Get Numby for iPad at the Apple App Store" />
             </map>
-		  <div id="info">
+            <div id="info">
   <div class="info-block">
 					<div class="info-block-image"><img src="ipad-w-rainbow-numby.png" alt="Top" title="For every rainbow in the sky, he counts the colors he can spy"./></div>
 					<div class="info-block-text">
@@ -103,7 +103,6 @@
 					</div>
 				</div>
 			</div>
-            <a href="http://pitarupaterson.com" target="_self"><img src="footer.png" alt="Top" title="Visit Pitaru Paterson"/></a>
-		</div>
+<img src="footer2.png" alt="Top" border="0" title="Visit Pitaru Paterson"/></div>
 	</body>
 </html>
