--- a/index.html
+++ b/index.html
@@ -10,50 +10,8 @@
     <!-- Le styles -->
 
     <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
+    
 
-      .rowwy {
-        margin-bottom: 40px;
-        /*text-align: center;*/
-      }
-
-      .heady {
-        width: 320px;
-        /*margin-top: 20px;*/
-        margin-bottom: 20px;
-        text-align: center;
-      }
-
-      .elevator p {
-        margin-left: 10px;
-        font-size: 1.8em;
-        line-height: 1.2em;
-        margin-bottom: 20px;
-        /*text-align: center;*/
-      }
-
-      .vid {
-        width: 400px;
-      }
-
-      .movie {
-/*        width: 768px;
-        height: 1024px;
-        background-color: #CCC;*/
-        text-align: right;
-      }
-
-      .cta {
-        margin-bottom: 40px;
-      }
-
-      .ifreezy {
-        width: 400px;
-        height: 564px;
-      }
 
 /*      .screenshot {
         margin-bottom: 40px;
@@ -88,7 +46,11 @@
 
       <div class="row rowwy">
 
-        <div class="span6 offset0">
+        <div class="span6 pull-right">
+          <img src="assets/img/header-solo.png" class="heady">
+        </div>
+
+        <div class="span6 offset0 pull-left">
             <div class="well vid">
               <iframe src="http://www.youtube.com/embed/Zk2EDi2H82E?rel=0" frameborder="0" allowfullscreen class="ifreezy"></iframe>
             </div>
@@ -96,7 +58,7 @@
 
         <div class="span6 offset0 elevator">
           <!-- <h2>About Numby</h2> -->
-          <img src="assets/img/header-solo.png" class="heady">
+          
           <p>Seeing each of our young kids learn to count sparked our imagination. <a href="#we" title="Who are Pitaru Paterson?">We</a> wanted to explore the simple act of counting from <a href="#zero" title="Why does Numby care about Zero?">zero</a> to ten in weird and wonky ways.</p>
           <p>We'll continue to teach him new tricks and surprise you with updates.</p>
           <a href="http://itunes.apple.com/ca/app/numby/id499958256"><img src="assets/img/app-store-badge-260.png"></a>
