--- a/index.html
+++ b/index.html
@@ -44,32 +44,32 @@
         </div>
       </div> -->
 
-      <div class="row rowwy">
+      <div class="row row-top">
 
-        <div class="span6 pull-right">
+        <div class="span6 pull-left">
           <img src="assets/img/header-solo.png" class="heady">
         </div>
 
-        <div class="span6 offset0 pull-left">
+        <div class="span6 offset0 pull-right">
             <div class="well vid">
               <iframe src="http://www.youtube.com/embed/Zk2EDi2H82E?rel=0" frameborder="0" allowfullscreen class="ifreezy"></iframe>
             </div>
         </div>
 
-        <div class="span6 offset0 elevator">
+        <div class="span6 offset0 elevator pull-left">
           <!-- <h2>About Numby</h2> -->
           
           <p>Seeing each of our young kids learn to count sparked our imagination. <a href="#we" title="Who are Pitaru Paterson?">We</a> wanted to explore the simple act of counting from <a href="#zero" title="Why does Numby care about Zero?">zero</a> to ten in weird and wonky ways.</p>
           <p>We'll continue to teach him new tricks and surprise you with updates.</p>
           <p>- Pitaru Paterson</p>
-          <a href="http://itunes.apple.com/ca/app/numby/id499958256"><img src="assets/img/app-store-badge-260.png"></a>
+          <a href="http://itunes.apple.com/ca/app/numby/id499958256"><img src="assets/img/app-store-badge-260.png" class="app-store"></a>
         </div>
         
       </div> 
 
       <!-- <hr> -->
 
-      <div class="row rowwy">
+      <div class="row">
 
         <div class="span6 offset0">
 
@@ -112,7 +112,7 @@
       </div> 
 
 
-      <div class="row rowwy">
+      <div class="row">
 
         <div class="span6">
           <img src="assets/img/iPad2-numby-1.png">
@@ -125,7 +125,7 @@
       </div>
 
 
-      <div class="row rowwy">
+      <div class="row">
         <div class="span6">
           <img src="assets/img/iPad2-numby-3.png">
         </div>
