--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
   <body>
 
+
+
     <div class="container">
 
   
@@ -51,9 +53,11 @@
         </div>
 
         <div class="span6 offset0 pull-right">
-            <div class="well vid">
+                           <iframe src="http://www.youtube.com/embed/Zk2EDi2H82E?rel=0" frameborder="0" allowfullscreen class="ifreezy"></iframe>
+          
+<!--             <div class="well vid">
               <iframe src="http://www.youtube.com/embed/Zk2EDi2H82E?rel=0" frameborder="0" allowfullscreen class="ifreezy"></iframe>
-            </div>
+            </div> -->
         </div>
 
         <div class="span6 offset0 elevator pull-left">
