stripping off wells

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="info">
 
             <h2 name="we" id="we">About Pitaru Paterson</h2>
-            <img src="assets/img/amit_james.gif" class="well">
+            <img src="assets/img/amit_james.gif" class="info-pic">
             <p>Hi! we're Amit Pitaru and James Paterson. We love to make art and to code, and especially to mix the two together.</p>
 
             <p>Numby is our first collaborative iPad app, but we've been making stuff together for a while. Over the years chasing our imaginations has lead us into the strange lands of drawing, music, animation, and even dance projects.</p>
@@ -103,7 +103,7 @@
           <div class="info">
 
             <h2><a name="zero" id="zero"></a>Why Numby Cares About Zero</h2>
-            <img src="assets/img/zero.png" class="well">
+            <img src="assets/img/zero.png" class="info-pic">
             <p>You'll notice that unlike other counting Robots, Numby counts down to Zero rather than one.</p>
 
             <p>Why did we make Numby aware of Zero? First of all, Zero is an important number. Someone even wrote an entire <a href="http://www.amazon.com/Zero-Biography-Dangerous-Charles-Seife/dp/0140296476" target="_self" title="Zero: The Biography of a Dangerous Idea">book about it</a>!</p>
