--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </br>  
 
       <footer>
-        <p>&copy; Pitaru Paterson 2012</p>
+        <p><a href="http://pitarupaterson.com">Pitaru Paterson</a></p>
       </footer>
 
     </div> <!-- /container -->
