--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         </div>
 
         <div class="span6 offset0 pull-right">
-          <iframe src="http://www.youtube.com/embed/Zk2EDi2H82E?rel=0" frameborder="0" allowfullscreen class="ifreezy"></iframe>
+          <div class="iframe-holder">
+            <iframe src="http://www.youtube.com/embed/Zk2EDi2H82E?rel=0" frameborder="0" allowfullscreen class="ifreezy"></iframe>
+          </div>
         </div>
 
         <div class="span6 offset0 elevator pull-left">
@@ -67,7 +69,47 @@
         
       </div> 
 
-      <!-- <hr> -->
+      <hr>
+
+
+
+
+      <div class="row row-ipad-shots">
+
+        <div class="row">
+          <div class="span12 span-ipad-shot">
+            <img src="assets/img/iPad2-numby-1.png" class="ipad-shot">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span12 span-ipad-shot">
+            <img src="assets/img/iPad2-numby-2.png" class="ipad-shot">
+          </div>
+        </div>
+
+
+
+        <div class="row">
+          <div class="span12 span-ipad-shot">
+            <img src="assets/img/iPad2-numby-3.png" class="ipad-shot">
+          </div>
+        </div>
+
+        <div class="row">
+
+          <div class="span12 span-ipad-shot">
+            <img src="assets/img/iPad2-numby-4.png" class="ipad-shot">
+          </div>
+
+        </div>  
+
+      </div>
+
+
+
+
+      <hr>
 
       <div class="row">
 
@@ -112,43 +154,8 @@
 
       </div> 
 
-
-      <div class="row">
-
-        <div class="span6">
-          <img src="assets/img/iPad2-numby-1.png">
-        </div>
-
-        <div class="span6">
-          <img src="assets/img/iPad2-numby-2.png">
-        </div>
-
-      </div>
-
-
-      <div class="row">
-        <div class="span6">
-          <img src="assets/img/iPad2-numby-3.png">
-        </div>
-
-        <div class="span6">
-          <img src="assets/img/iPad2-numby-4.png">
-        </div>
-
-      </div>  
-
-
-
-
       <hr>
-      </br>  
 
-
-
-
-
-
-      </br>  
 
       <footer>
         <p><a href="http://pitarupaterson.com">Pitaru Paterson</a></p>
