--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           
           <p>Seeing each of our young kids learn to count sparked our imagination. <a href="#we" title="Who are Pitaru Paterson?">We</a> wanted to explore the simple act of counting from <a href="#zero" title="Why does Numby care about Zero?">zero</a> to ten in weird and wonky ways.</p>
           <p>We'll continue to teach Numby new tricks and surprise you with updates.</p>
-          <p>♥ Pitaru Paterson</p>
+          <p>♡ Pitaru Paterson</p>
           <a href="http://itunes.apple.com/ca/app/numby/id499958256"><img src="assets/img/app-store-badge-260.png" class="app-store"></a>
         </div>
         
