--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <li><a href="http://vimeo.com/3826197" target="_self" title="Watch Smashup: Chain Reaction">Smashup the dance project</a> - Don't worry, we're not dancing in this clip.</li>
               </ul>
             </p>
-            <p>To check out a diverse jumble of other projects, check out <a href="http://pitarupaterson.com">our site</a>.</p>
+            <!-- <p>To check out a diverse jumble of other projects, check out <a href="http://pitarupaterson.com">our site</a>.</p> -->
           
           </div>
 
